--- a/snowflake.ipynb
+++ b/snowflake.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 3,
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 5,
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 7,
@@ -260,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 9,
@@ -329,7 +329,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 11,
@@ -405,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 13,
@@ -433,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 14,
@@ -454,7 +454,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 15,
@@ -569,7 +569,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 18,
@@ -9031,7 +9031,7 @@
     {
      "data": {
       "text/plain": [
-       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff8a83ebd0>"
+       "<snowflake.connector.cursor.SnowflakeCursor at 0xffff6d0a86d0>"
       ]
      },
      "execution_count": 20,
